--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-sheets
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: JCCCNC JAHA Digital Collections Test
+title: JAHA Digital Collections
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: test site
 # description appears in meta tags and other locations
