--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: JAHA Digital Collections
 tagline: test site
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: This is a test site for JCCCNC JAHA digital collection, Yokohama Specie Bank records
+description: This is a test site for Yokohama Specie Bank records.
 author: JCCCNC
 
 ##########
