--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ metadata-csv: https://docs.google.com/spreadsheets/d/e/2PACX-1vSwCUWR8AddnD7xe_H
 # Uncomment these and enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
 organization-name: "Japanese Cultural and Community Center of Northern California (JCCCNC)"
 organization-link: https://jcccnc.org/
-organization-logo-banner: https://media.shorthand.com/media/organisations/oavB8XgKTl/cpf5ANl34X/thecenter_primary_complete_white_rgb-478x390.png
-organization-logo-nav: https://media.shorthand.com/media/organisations/oavB8XgKTl/cpf5ANl34X/thecenter_primary_complete_white_rgb-478x390.png
+organization-logo-banner: https://www.jcccnc.org//wp-content/uploads/2021/03/JCCNCGreen.png
+organization-logo-nav: https://www.jcccnc.org//wp-content/uploads/2021/03/JCCNCGreen.png
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
