--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ metadata-csv: https://docs.google.com/spreadsheets/d/e/2PACX-1vSwCUWR8AddnD7xe_H
 organization-name: "Japanese Cultural and Community Center of Northern California (JCCCNC)"
 organization-link: https://jcccnc.org/
 organization-logo-banner: https://www.jcccnc.org//wp-content/uploads/2021/03/JCCNCGreen.png
-organization-logo-nav: https://www.jcccnc.org//wp-content/uploads/2021/03/JCCNCGreen.png
+organization-logo-nav: https://www.apilegaloutreach.org/wp-content/uploads/2020/10/JCCCNC_MainLogo.png
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
