--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,6 @@ sass:
   style: compressed
 
 #remote_theme: pages-themes/slate@v0.2.0
-theme: jekyll-theme-slate
+theme: jekyll-theme-slate@v0.2.0
 # plugins:
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
