--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,11 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use a relative location of an image in this repo (ex. /assets/img/feature.jpg), or a full url to an image elsewhere
-featured-image: /assets/img/Figure4.jpg
-featured-image: /assets/img/Figure5.jpg
-featured-image: /assets/img/Figure3.jpg
-featured-image: /assets/img/generations_27.jpg
-featured-image: /assets/img/generations_19.jpg
+featured-image: /assets/img/Figure4.jpg;/assets/img/Figure5.jpg;/assets/img/Figure3.jpg;/assets/img/generations_27.jpg;/assets/img/generations_19.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 10em # Default is 8em
 # optional: change position of background image, center, top, bottom
